# mobile_manipulator

./: README.md
draw_core/: CMakeLists.txt  package.xml  readme.txt
draw_core/launch/: start_draw.launch
draw_core/scripts/: arm_controller.py  gcode_draw.py  gcode_excute.py  img_process.py  markerpub.py  svg_convert.py
gazebo2rviz/scripts/: gazebo2marker_node.py
grasp_control/: CMakeLists.txt  package.xml
grasp_control/launch/: grasp_control.launch
grasp_control/scripts/: control.py
multi_rrt_exploration/: CMakeLists.txt  package.xml
multi_rrt_exploration/include/: functions.h
multi_rrt_exploration/launch/: rrt_three_robots.launch  rrt_two_robots.launch  single.launch  two_robots_real.launch
multi_rrt_exploration/maps/: r0_0.map.pgm  r0_0.map.yaml  r0_1.map.pgm  r0_1.map.yaml  r1_0.map.pgm  r1_0.map.yaml  r1_1.map.pgm  r1_1.map.yaml  rs_0.map.pgm  rs_0.map.yaml  rs_1.map.pgm  rs_1.map.yaml
multi_rrt_exploration/scripts/: assigner.py  assigner_real_two_robots.py  filter.py  filter_backup.py  filter_real_two_robots.py  frontier_opencv_detector.py  functions.py  functions_real_two_robots.py  newassigner.py  recordDistance.py  recordDistance_two_robots.py  recordDistance_two_robots_real.py
multi_rrt_exploration/src/: functions.cpp  global_rrt_detector.cpp  global_rrt_detector_real_two_robots.cpp  local_rrt_detector.cpp  local_rrt_detector_real_two_robots.cpp
multi_turtlebot3_navigation/: readme.md
multi_turtlebot3_navigation/config/: costmap_common.yaml  costmap_exploration.yaml  planner.yaml
multi_turtlebot3_navigation/launch/: gmapping.launch  (+8 more)
(+65 files in other folders)
